# PlainTools

./: .gitignore  .readthedocs.yaml  Intro.md  LICENSE  PlainTools.py  PlainToolsDocs.html  PlainTools’ Documentation 1.0.24828b.html  README.md  README.rst  dump.py  pyproject.toml  singlefile-settings.json  test.py
.github/workflows/: github-actions.yml
PlainTools/: PlainTools.py
beta/: Away.py  Block.py
docs/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  search.html  searchindex.js  server.py
docs/_sources/: index.rst
docs/_static/: documentation_options.js  font.css
docs/source/: conf.py  unindex.txt
src/PlainTools/: PlainTools.py
tests/: PlainTools.py  pnum.py
works/: Away.py  Block.py  Code-runner_temp.py  Code.py  PlainToolsB.py  READMERST.rst  Seval.py  pnum.py  unittests.py
